--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "@city41/sromcrom": "^0.15.1",
     "@types/color-diff": "^1.2.5",
+    "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.4",
     "@types/mkdirp": "^2.0.0",
     "@types/node": "^20.11.25",
     "canvas": "^2.11.2",
     "color-diff": "^1.4.0",
+    "jest": "^30.0.4",
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
